[package]
name = "chrono-utilities"
version = "0.0.0-alpha1"
authors = [
    "liquidscorpio <liquidscorpio@users.noreply.github.com>"
]
edition = "2018"
description = "Utility functions to manipulate chrono dates"
homepage = "https://github.com/liquidscorpio/chrono-utils"
repository = "https://github.com/liquidscorpio/chrono-utils"
documentation = "https://docs.rs/chrono-utilities/"
keywords = ["date", "time"]
categories = ["date-and-time"]
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.13"
time = "0.1.43"

[lib]
name = "chrono_utilities"
